--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -7,6 +7,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script src="assets/sockjs1.1.2.js"></script>
+  <script src="assets/stomp2.3.3.js"></script>
 </head>
 <body>
   <app-root>Loading...</app-root>
